# jvr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  building_robot.sdf  lidar.gzlaunch  lidar.txt  notes.txt  package.xml
description/: inertial_macros.xacro  jvr.robot.xacro  jvr.rviz  jvr.urdf  jvr.urdf.xacro
design/: components.description.md  components.design.plantuml  components.implementation.md  components.trace.plantuml  jvr_basic.components.puml  jvr_basic.documentation.md  package.diagram.plantuml  test.md
design/old/: components.description.md  components.trace.puml
docs/: install.md  ros2-iron-irwini-op-wsl.txt
jvr_basic/: CMakeLists.txt  package.xml  setup.cfg  setup.py
jvr_basic/include/jvr_basic/: ListenerNode.hpp  TalkerNode.hpp
jvr_basic/jvr_basic/: ITalker.py  listener.py  talker.py
jvr_basic/launch/: basic.launch.py
jvr_basic/src/: ListenerMain.cpp  ListenerNode.cpp  TalkerMain.cpp  TalkerNode.cpp  talker.cpp
jvr_controller/: package.xml  setup.cfg  setup.py
jvr_controller/jvr_controller/: IObjectDetection.py  robot_detector.py  robot_position_publisher.py
jvr_controller/launch/: jvr.launch.py  jvr_robot.rviz  rviz.launch.py
jvr_controller/urdf/: jvr.urdf
jvr_helpers/: package.xml  setup.cfg  setup.py
jvr_helpers/jvr_helpers/: utils.py
jvr_interfaces/: CMakeLists.txt  package.xml
jvr_interfaces/action/: Drive.action
jvr_interfaces/msg/: Drive.msg  ObjectDetection.msg  RobotInfo.msg  TalkMsg.msg
jvr_robot/: package.xml  setup.cfg  setup.py
jvr_robot/jvr_robot/: DistanceSweepSensor.py  DistanceSweepSensorNode.py  IDrive.py  IEmergency.py  IMotorController.py  IObjectDetector.py  JvrRobotHardware.py  JvrRobotHardwareSimulate.py  JvrRobotHardware_real.py  JvrRobotHardware_simulate.py  MotorController.py  MotorControllerNode.py  config.py  distance_sweep_sensor_node.py  drive_action_server.py  drive_node.py  emergency.py  emergency_node.py  motor_controller_node.py  robot_info.py  utils.py
jvr_robot/jvr_robot/hardware/: Motor.py  SG90Servo.py  hardware_real.py  hardware_simulate.py
jvr_robot/jvr_robot/hardware/real/: Motor.py  SG90Servo.py  Servo.py  UltrasoneSensor.py
jvr_robot/jvr_robot/hardware/simulated/: Motor.py  SG90Servo.py  UltrasoneSensor.py
jvr_robot/jvr_robot/hardware_real/: Motor.py
jvr_robot/jvr_robot/hardware_simulated/: Motor.py  SG90Servo.py  UltrasoneSensor.py
jvr_sim/: CMakeLists.txt  notes.txt  package.xml
jvr_sim/description/: jvr.robot.xacro
jvr_sim/hooks/: jvr_sim.dsv.in  jvr_sim.sh.in
jvr_sim/include/jvr_sim/: FullSystem.hpp  Odometer.hh  OdometerSystem.hh  SweepSensor.hh  SweepSensor.hpp  SweepSensorSystem.hh  UltrasonicSensor.hpp  UltrasonicSensorSystem.hpp
jvr_sim/launch/: gazebo.launch.py  jvr.simulation.launch.py
jvr_sim/rviz/: jvr.rviz
jvr_sim/src/: FullSystem.cpp  Odometer.cc  OdometerSystem.cc  SweepSensor-statediagram.puml  SweepSensor.cpp  SweepSensor.cpp.old  SweepSensorSystem.cpp  UltrasonicSensor.cpp  UltrasonicSensorSystem.cpp
jvr_sim/worlds/: empty.sdf  gui.config  jvr_empty_world.sdf
jvr_web/: package.xml  setup.cfg  setup.py
jvr_web/jvr_web/: index.py  node.py  nodes.py  topic.py  web.py
jvr_web/jvr_web/templates/: base.jinja  macros.jinja
jvr_web/jvr_web/templates/index/: index.jinja
jvr_web/jvr_web/templates/node/: info.html  info.jinja  list.html  list.jinja
jvr_web/jvr_web/templates/nodes/: list.html
jvr_web/jvr_web/templates/topic/: info.jinja  list.jinja
launch/: jvr.launch.py  jvr.simulation.launch.py
misc/: change_i2c_compass.py  compass_hmc5883l_to_file.py  mapping-notes.txt  read_compass_hmc5883l.py  sensors.py
rviz/: jvr.rviz
tutorial/: lidar_node.cc
